css/style.css
/* ... */
.sidebar > h3 {
    margin-bottom: 50px;
}
/* وفرت علي نفسك انك تعدل علي الكود تاني في الشاشات الصغيره */
@media (min-width: 768px) {
    .sidebar > h3::before {
        position: absolute;
        content: "";
        top: 40px;
        left: 50%;
        background-color: black;
        width: 70%;
        height: 2px;
        transform: translateX(-50%)
    }
    .sidebar > h3::after {
        position: absolute;
        content: "";
        width: 12px;
        height: 12px;
        border: solid 5px white;
        border-radius: 50%;
        background-color: black;
        top: 40px;
        left: 50%;
        transform: translate(-50%, -50%)
    }
    
}
.sidebar li .active, .sidebar li a:hover {
    background-color: #f6f6f6;
    transition: 0.3s;
}
@media (min-width: 768px) {
    .sidebar li a i {
        margin-right: 10px;
    }
}
@media (max-width: 767px) {
    .sidebar {
        width: 58px;
        padding: 10px;
    }
    .sidebar h3 {
        margin-bottom: 15px;
        font-size: 13px;
    }
    .sidebar li a span {
    display: none;
    }
}
/* End Sidebar */
/* Start Header */
.page .content .header {
    /* height: 70px; */
    background-color: white;
    flex: 1;
    padding: 15px;
}
.page .content .header .search > input {
    width: 160px;
    font-size: 12px;
    padding: 10px 10px 10px 30px;
    border-radius: 10px;
    border:1px solid#ccc;
    transition: width 0.3s;
    position: relative;
    z-index: 0;
    transition: width 0.3s ease-in-out, box-shadow 0.3s ease-in-out; /* تأثير الانتقال */
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), /* ظل ناعم حول العنصر */
    0 1px 3px rgba(0, 0, 0, 0.08); /* ظل داخلي طفيف */

}
.page .content .header .search::before {
    font-family: var(--fa-style-family-classic);
    content: "\f002";
    font-weight: 900;
    position: absolute;
    left: 10px;
    top: 50%;
    transform: translateY(-50%);
    font-size: 14px;
    color: var(--grey-color);
    z-index: 1;
}
.page .content .header .search > input:focus {
    width: 180px;
    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15), /* ظل أقوى عند التركيز */
                0 2px 4px rgba(0, 0, 0, 0.1); /* ظل داخلي أقوى */

    /* box-shadow: 0 0 6px rgba(0, 0, 0, 0.1); */
}
.page .content .header .search > input::placeholder {
    color: var(--grey-color);
    font-size: 13px;
}
.page .content .header .icons span i {
    margin-right: 10px;
}
.page .content .header img {
    width: 35px;
}
/* End Header */
/* Start Boxes */
.main-page-title {
    position: relative;
    text-transform: capitalize;
    font-size: 35px;
    letter-spacing: -1px;
    margin: 20px 20px 40px;
}
.main-page-title::after {
    position: absolute;
    content: "";
    width: 120px;
    height: 5px;
    background: linear-gradient(90deg, black 35%, white 25%);
    top: 45px;
    left: 0px;
}
.page .content .wrapper {
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 20px;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
    gap: 20px;
}
@media(max-width: 767px) {
    .page .content .wrapper {
        margin-left: 10px;
        margin-right: 10px;
        margin-bottom: 10px;
        display: grid;
        grid-template-columns: minmax(100px, 1fr);
        gap: 10px;
    }
    .page .wrapper .welcome .header .welcomeImage {
        width: 120px;
    }
    
}
.page .content .wrapper .box {
    background-color: white;
    border-radius: 10px;
    padding: 20px 15px;

}
.page .content .wrapper .box .header {
    background-color: #eee;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}
.page .content .wrapper .welcomeImage {
    width: 200px;
}
.page .wrapper .welcome .content {
    padding: 20px 60px;
    margin: 60px 0 20px;
    border-top: 1px solid #eee;
    border-bottom: 1px solid #eee;
}
@media(max-width: 767px){
    .page .wrapper .welcome .content {
        padding: 20px;
        margin: 70px 0 ;
        border-top: 1px solid #eee;
        border-bottom: 1px solid #eee;
    }
}
.page .wrapper .welcome .image {
    position: relative;
}
.page .wrapper .welcome .image img{
    width: 55px;
    position: absolute;
    top: 50%;
    left: 10px;
    border: 4px solid white;
    border-radius: 50%;
    transform: translateY(-50%);
    box-shadow: 0 0 5px #ddd;
}
.page .wrapper .welcome .content span:not(:last-of-type) {
    margin-bottom: 10px;
    text-transform: capitalize;
    font-weight: bold;
}
.page .wrapper .welcome .content span:nth-child(2) {
    color: var(--grey-color);
    font-size: 14px;
    text-transform: capitalize;
}
.page .wrapper .welcome .visit {
    margin: 20px 0px 0px auto;
    padding: 4px 10px 6px;
    text-transform: capitalize;
    transition: 0.3s;

}
.page .wrapper .welcome .visit:hover {
    background-color: var(--blue-alt-color)
}
/* ==========draft=========== */
.page .wrapper .draft {
    background-color: white;
    padding: 0px 10px;

}
.page .wrapper .draft .body .title {
    margin-bottom: 20px;
}
.page .wrapper .draft .body .title,
.page .wrapper .draft .body .thought {
    padding: 7px;
    border: none;
    background-color: #eee;
    border-radius: 6px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), /* ظل ناعم حول العنصر */
    0 1px 3px rgba(0, 0, 0, 0.08); /* ظل داخلي طفيف */
    transition: box-shadow 0.3s ease-in-out; /* تأثير الانتقال */
}
.page .wrapper .draft .body .title:focus,
.page .wrapper .draft .body .thought:focus {
    outline: none;
    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15), /* ظل أقوى عند التركيز */
                0 2px 4px rgba(0, 0, 0, 0.1); /* ظل داخلي أقوى */
}
.page .wrapper .draft .body .title::placeholder,
.page .wrapper .draft .body .thought::placeholder {
    text-transform: capitalize;
    font-size: 12px;
}
.page .wrapper .draft .body .thought {
    min-height: 200px;
    resize: none;
}
.page .draft .save {
    padding: 4px 10px 6px;
    margin: 20px 0px 0px auto;
    text-transform: capitalize;
    transition: 0.3s;
}
/* ... */

